# i3-cfg

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: main.rs  model.rs  parser.rs
src/grammar/: i3-cfg.pest  i3_config_full.pest
src/snapshots/: i3_cfg__parser__tests__bar.snap  i3_cfg__parser__tests__bindcode_1.snap  i3_cfg__parser__tests__bindmouse_1.snap  i3_cfg__parser__tests__bindmouse_2.snap  i3_cfg__parser__tests__bindmouse_3.snap  i3_cfg__parser__tests__bindsym_modifier_2.snap  i3_cfg__parser__tests__bindsym_release.snap  i3_cfg__parser__tests__keysym.snap
