[package]
name = "i3-cfg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "i3-cfg"
test = false
bench = false

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.i3ipc]
git = "https://github.com/rogueai/i3ipc-rs.git"
features = ["i3-4-14"]

[dev-dependencies]
insta = "1.15.0"